--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div id="mc_embed_signup">
                     <form action="https://dance.us17.list-manage.com/subscribe/post?u=8bccf223ed27b67a91874b75b&amp;id=67122b8ee9&amp;f_id=006b5be0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">
-                        <h2>Subscribe</h2>
+                        <h2>Be the first to know when we go Live!</h2>
                         <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                 <div class="mc-field-group">
                     <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
