--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container py-3">
         <header class="pricing-header p-3 pb-md-4 mx-auto text-center">
             <h1 class="display-4 fw-normal">Haley Mulvany</h1>
-            <p class="fs-5 text-muted">Stay tuned. I will be launching my own websitesoon. I'm are working hard and am almost ready to launch. Stay Tuned!!</p>
+            <p class="fs-5 text-muted">Stay tuned. I will be launching my own website soon. I'm working hard and am almost ready to launch. Stay Tuned!!</p>
         </header>
         <main>
             <div class="row justify-content-center align-items-center">
